#
# Copyright NEXTDC LTD. 2014
# 

# Provides access to CMAKE_INSTALL_LIBDIR -> lib or lib64
# requires cmake >= 2.8, therefore not in RHEL6
#INCLUDE(GNUInstallDirs)

set (CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../cmake")
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../libs)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../server)

IF (CMAKE_SIZEOF_VOID_P MATCHES "8")
  SET (LIB_SUFFIX "64")
ENDIF (CMAKE_SIZEOF_VOID_P MATCHES "8")
SET (LIB_INSTALL_DIR "${CMAKE_INSTALL_PREFIX}/lib${LIB_SUFFIX}")

FIND_PACKAGE(LibXml2 REQUIRED)
IF(LIBXML2_FOUND)
    INCLUDE_DIRECTORIES(${LIBXML2_INCLUDE_DIR})
    SET (LIBS ${LIBS} ${LIBXML2_LIBRARIES})
ENDIF(LIBXML2_FOUND)

# Standard build flags
SET (CMAKE_C_FLAGS "-g -Wall -Werror")

# Debug build flags. cmake -DCMAKE_BUILD_TYPE=Debug .
SET (CMAKE_C_FLAGS_DEBUG "-g -Wall -Werror -DDEBUG -DDEBUG_REFCNT -DDEBUG_VALGRIND -DDEBUG_CACHE")

SET(INCLUDE_DIR "${CMAKE_INSTALL_PREFIX}/include")

FILE(GLOB OBIX_LIB_FILES *.c)
ADD_LIBRARY(mod_obix_test SHARED ${OBIX_LIB_FILES})
TARGET_LINK_LIBRARIES(mod_obix_test libobix-common ${LIBS})
SET_TARGET_PROPERTIES(mod_obix_test PROPERTIES OUTPUT_NAME "mod_obix_test")
SET_TARGET_PROPERTIES(mod_obix_test PROPERTIES SOVERSION 0)

# Install .so into /usr/lib$suffix. 
INSTALL(TARGETS mod_obix_test LIBRARY DESTINATION "${LIB_INSTALL_DIR}")
